--- a/practice.ipynb
+++ b/practice.ipynb
@@ -281,33 +281,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     102\n",
-       "1     115\n",
-       "2     102\n",
-       "3     106\n",
-       "4     109\n",
-       "     ... \n",
-       "88    115\n",
-       "89    103\n",
-       "90     97\n",
-       "91    104\n",
-       "92    105\n",
-       "Name: Wheelbase, Length: 93, dtype: int64"
+       "103.98924731182795"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Wheelbase"
+    "# Wheelbase의 평균\n",
+    "Wheelbase_avg = Wheelbase.mean()\n",
+    "Wheelbase_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.389026269401888"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Wheelbase의 표준편차\n",
+    "Wheelbase_sd = Wheelbase.std()\n",
+    "Wheelbase_sd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case1. 평균 값에서 표준편차를 1.5배를 더하거나 빼는 경우\n",
+    "# 구간의 하한(Low_1)과 상한(Upp_1) 계산\n",
+    "Low_1 = Wheelbase_avg - 1.5 * Wheelbase_sd\n",
+    "Upp_1 = Wheelbase_avg + 1.5 * Wheelbase_sd\n",
+    "\n",
+    "# 구간 내 데이터들의 평균\n",
+    "Avg_1 = Wheelbase[(Wheelbase > Low_1) & (Wheelbase < Upp_1)].mean()\n",
+    "\n",
+    "# 원래의 데이터 평균에서 뺌\n",
+    "Case1 = Wheelbase_avg - Avg_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case2. 평균 값에서 표준편차를 2배를 더하거나 빼는 경우\n",
+    "# 구간의 하한(Low_2)과 상한(Upp_2) 계산\n",
+    "Low_2 = Wheelbase_avg - 2 * Wheelbase_sd\n",
+    "Upp_2 = Wheelbase_avg + 2 * Wheelbase_sd\n",
+    "\n",
+    "# 구간 내 데이터들의 평균\n",
+    "Avg_2 = Wheelbase[(Wheelbase > Low_2) & (Wheelbase < Upp_2)].mean()\n",
+    "\n",
+    "# 원래의 데이터 평균에서 뺌\n",
+    "Case2 = Wheelbase_avg - Avg_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case3. 평균 값에서 표준편차를 2.5배를 더하거나 빼는 경우\n",
+    "# 구간의 하한(Low_3)과 상한(Upp_3) 계산\n",
+    "Low_3 = Wheelbase_avg - 2.5 * Wheelbase_sd\n",
+    "Upp_3 = Wheelbase_avg + 2.5 * Wheelbase_sd\n",
+    "\n",
+    "# 구간 내 데이터들의 평균\n",
+    "Avg_3 = Wheelbase[(Wheelbase > Low_3) & (Wheelbase < Upp_3)].mean()\n",
+    "\n",
+    "# 원래의 데이터 평균에서 뺌\n",
+    "Case3 = Wheelbase_avg - Avg_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 결과를 result에 할당\n",
+    "result = round(Case1 + Case2 + Case3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4845\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결과 출력\n",
+    "print(result)"
    ]
   }
  ],
