--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2731,6 +2731,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Q. 남녀 몸무게 데이터를 임의로 생성하고, 두 데이터가 서로 짝지어져 있다고 가정하고, 두 데이터에 대한 모평균이 서로 다르다고 할 수 있는 지 대응표본 t-검정을 수행해보자.(정규성 만족 가정)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 남녀 몸무게 데이터를 임의로 생성\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "female = np.array([50.7, 58.4, 74.1, 65.1, 77.8, 48.1, 46.3])\n",
+    "male = np.array([75.5, 83.9, 75.7, 56.2, 73.4, 67.7, 79.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-12.985714285714291"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 두 데이터의 차이의 평균\n",
+    "diff = female - male\n",
+    "np.mean(diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-2.078446933064972, pvalue=0.08291274205610201, df=6)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 대응표본 t-검정 실행\n",
+    "from scipy.stats import ttest_rel\n",
+    "ttest_rel(female, male)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q. 남녀 몸무게 데이터를 활용해 두 데이터가 독립이라고 가정하고, 두 데이터에 대한 모평균이 서로 다르다고 할 수 있는 지 독립표본 t-검정을 수행해보자.(정규성, 등분산성 만족 가정)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-2.2186641577772956, pvalue=0.046550122110569664, df=12.0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 독립표본 t-검정 실행\n",
+    "from scipy.stats import ttest_ind\n",
+    "ttest_ind(female, male)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2장. 통계 모형"
    ]
   },
@@ -4624,46 +4717,472 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "빅데이터 분석기사 제6회 기출문제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "제 1유형"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "01"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "sejong_fire = pd.read_csv('./data/sejong_fire.csv', encoding = 'cp949')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 화재 진압 시간 계산\n",
+    "sejong_fire['접수일시'] = pd.to_datetime(sejong_fire['접수일시'])\n",
+    "sejong_fire['상황종료일시'] = pd.to_datetime(sejong_fire['상황종료일시'])\n",
+    "sejong_fire['화재진압시간'] = (sejong_fire['상황종료일시'] - sejong_fire['접수일시']).astype('timedelta64[s]')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 화재 진압 시간이 가장 큰 서센터의 평균 화재 진압 시간 계산\n",
+    "# 화재 진압 시간이 가장 큰 서센터\n",
+    "center_name = sejong_fire['서센터명'][sejong_fire['화재진압시간'].argmax()]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 위 센터에 대한 데이터만 복사\n",
+    "df = sejong_fire.loc[sejong_fire['서센터명'] == center_name].copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timedelta('1 days 02:13:06')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['화재진압시간'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>student_1</th>\n",
+       "      <th>student_2</th>\n",
+       "      <th>student_3</th>\n",
+       "      <th>student_4</th>\n",
+       "      <th>student_5</th>\n",
+       "      <th>student_6</th>\n",
+       "      <th>teacher</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>광일초등학교</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>35</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "      <td>60</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>남성초등학교</td>\n",
+       "      <td>86</td>\n",
+       "      <td>100</td>\n",
+       "      <td>99</td>\n",
+       "      <td>71</td>\n",
+       "      <td>78</td>\n",
+       "      <td>49</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>대남초등학교</td>\n",
+       "      <td>46</td>\n",
+       "      <td>70</td>\n",
+       "      <td>49</td>\n",
+       "      <td>40</td>\n",
+       "      <td>62</td>\n",
+       "      <td>56</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>대연초등학교</td>\n",
+       "      <td>132</td>\n",
+       "      <td>135</td>\n",
+       "      <td>151</td>\n",
+       "      <td>156</td>\n",
+       "      <td>179</td>\n",
+       "      <td>171</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>대천초등학교</td>\n",
+       "      <td>90</td>\n",
+       "      <td>106</td>\n",
+       "      <td>84</td>\n",
+       "      <td>106</td>\n",
+       "      <td>126</td>\n",
+       "      <td>118</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  school_name  student_1  student_2  student_3  student_4  student_5  \\\n",
+       "0      광일초등학교         43         36         35         51         65   \n",
+       "1      남성초등학교         86        100         99         71         78   \n",
+       "2      대남초등학교         46         70         49         40         62   \n",
+       "3      대연초등학교        132        135        151        156        179   \n",
+       "4      대천초등학교         90        106         84        106        126   \n",
+       "\n",
+       "   student_6  teacher  \n",
+       "0         60       16  \n",
+       "1         49       22  \n",
+       "2         56       20  \n",
+       "3        171       45  \n",
+       "4        118       34  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "busan_school_Info = pd.read_csv('./data/busan_school_Info.csv', encoding = 'cp949')\n",
+    "busan_school_Info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 전체 학생 수의 교사 비율(교사 1인당 학생 수)이 가장 높은 학교의 교사 수\n",
+    "# 교사 1인당 학생 계산\n",
+    "ratio = busan_school_Info.iloc[:, 1:7].sum(axis = 1) / busan_school_Info['teacher']\n",
+    "\n",
+    "# 위의 값이 가장 큰 학교 데이터만 추출\n",
+    "max_school_name = busan_school_Info['school_name'][ratio.argmax()]\n",
+    "df = busan_school_Info.loc[busan_school_Info['school_name'] == max_school_name].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 결과 저장\n",
+    "result = df['teacher'][ratio.argmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결과 출력\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연월</th>\n",
+       "      <th>살인_발생건수</th>\n",
+       "      <th>살인_검거건수</th>\n",
+       "      <th>강도_발생건수</th>\n",
+       "      <th>강도_검거건수</th>\n",
+       "      <th>강간_강제추행_발생건수</th>\n",
+       "      <th>강간_강제추행_검거건수</th>\n",
+       "      <th>절도_발생건수</th>\n",
+       "      <th>절도_검거건수</th>\n",
+       "      <th>폭력_발생건수</th>\n",
+       "      <th>폭력_검거건수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008. 01 월</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>191</td>\n",
+       "      <td>186</td>\n",
+       "      <td>1870</td>\n",
+       "      <td>1166</td>\n",
+       "      <td>5534</td>\n",
+       "      <td>5342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008. 02 월</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>184</td>\n",
+       "      <td>182</td>\n",
+       "      <td>1733</td>\n",
+       "      <td>996</td>\n",
+       "      <td>4534</td>\n",
+       "      <td>4341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008. 03 월</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>262</td>\n",
+       "      <td>255</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>1687</td>\n",
+       "      <td>5690</td>\n",
+       "      <td>5464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008. 04 월</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>102</td>\n",
+       "      <td>88</td>\n",
+       "      <td>276</td>\n",
+       "      <td>262</td>\n",
+       "      <td>2513</td>\n",
+       "      <td>1744</td>\n",
+       "      <td>6080</td>\n",
+       "      <td>5843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008. 05 월</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>79</td>\n",
+       "      <td>71</td>\n",
+       "      <td>297</td>\n",
+       "      <td>290</td>\n",
+       "      <td>2406</td>\n",
+       "      <td>1375</td>\n",
+       "      <td>6427</td>\n",
+       "      <td>6135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           연월  살인_발생건수  살인_검거건수  강도_발생건수  강도_검거건수  강간_강제추행_발생건수  강간_강제추행_검거건수  \\\n",
+       "0  2008. 01 월       19       18       49       49           191           186   \n",
+       "1  2008. 02 월        9        9       43       36           184           182   \n",
+       "2  2008. 03 월       14       10       78       75           262           255   \n",
+       "3  2008. 04 월       19       20      102       88           276           262   \n",
+       "4  2008. 05 월       23       23       79       71           297           290   \n",
+       "\n",
+       "   절도_발생건수  절도_검거건수  폭력_발생건수  폭력_검거건수  \n",
+       "0     1870     1166     5534     5342  \n",
+       "1     1733      996     4534     4341  \n",
+       "2     2374     1687     5690     5464  \n",
+       "3     2513     1744     6080     5843  \n",
+       "4     2406     1375     6427     6135  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "five_crime = pd.read_csv('./data/five_crime.csv', encoding = 'cp949')\n",
+    "five_crime.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연도별 범죄 총 발생건수 계산\n",
+    "# 사이 공백들 처리 후 연도와 월을 문자열로 처리\n",
+    "five_crime['연월'] = five_crime['연월'].str.replace(' ', '')\n",
+    "five_crime['연월'] = five_crime['연월'].str.replace('월', '')\n",
+    "five_crime['연도'] = five_crime['연월'].str[:4].copy()\n",
+    "five_crime['월'] = five_crime['연월'].str[-2:].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 총 발생 건수 컬럼 추가\n",
+    "five_crime['총발생건수'] = five_crime.iloc[:,range(1, 11, 2)].sum(axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연도별 범죄 총 발생건수의 월평균 계산\n",
+    "연도별월평균 = five_crime.groupby('연도')['총발생건수'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5886\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\taek5\\AppData\\Local\\Temp\\ipykernel_11280\\4010754138.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result = five_crime.groupby('연도')['폭력_발생건수'].mean()[max_year]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 월평균이 가장 큰 연도 찾은 후 해당연도의 월평균 폭력검거건수를 출력\n",
+    "max_year = 연도별월평균.argmax()\n",
+    "result = five_crime.groupby('연도')['폭력_발생건수'].mean()[max_year]\n",
+    "result = round(result, 0).astype('int')\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
